--- a/Alt-Link/Alt-Link.vcxproj.filters
+++ b/Alt-Link/Alt-Link.vcxproj.filters
@@ -68,5 +68,11 @@
     <ClCompile Include="main.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="Component.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="ARMv6MSCS.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
