--- a/Alt-Link/Alt-Link.vcxproj.filters
+++ b/Alt-Link/Alt-Link.vcxproj.filters
@@ -74,5 +74,8 @@
     <ClCompile Include="ARMv6MSCS.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="ARMv6MDWT.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
