* Add ARMv6MBPU, ARMv7MFPB.

--- a/Alt-Link/Alt-Link.vcxproj
+++ b/Alt-Link/Alt-Link.vcxproj
@@ -84,8 +84,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="ADIv5.h" />
+    <ClInclude Include="ARMv6MBPU.h" />
     <ClInclude Include="ARMv6MDWT.h" />
     <ClInclude Include="ARMv6MSCS.h" />
+    <ClInclude Include="ARMv7MFPB.h" />
     <ClInclude Include="assert.h" />
     <ClInclude Include="CMSIS-DAP.h" />
     <ClInclude Include="Converter.h" />
@@ -100,8 +102,10 @@
   <ItemGroup>
     <ClCompile Include="ADIv5.cpp" />
     <ClCompile Include="ADIv5TI.cpp" />
+    <ClCompile Include="ARMv6MBPU.cpp" />
     <ClCompile Include="ARMv6MDWT.cpp" />
     <ClCompile Include="ARMv6MSCS.cpp" />
+    <ClCompile Include="ARMv7MFPB.cpp" />
     <ClCompile Include="Component.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="CMSIS-DAP.cpp" />
