--- a/Alt-Link/Alt-Link.vcxproj.filters
+++ b/Alt-Link/Alt-Link.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClInclude Include="TargetInterface.h">
       <Filter>ヘッダー ファイル\RemoteSerialProtocol</Filter>
     </ClInclude>
+    <ClInclude Include="JEP106.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -105,6 +108,9 @@
       <Filter>ソース ファイル</Filter>
     </ClCompile>
     <ClCompile Include="CMSIS-DAP.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="JEP106.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
   </ItemGroup>
