* Add AltLink class to manage CMSIS-DAP devices. * Add RspServer.cpp, RspServer.h * Add testHaltAndRun() * Add readDEMCR(), writeDEMCR() to enable trace component automatically. * Improve some type description

--- a/Alt-Link/Alt-Link.vcxproj
+++ b/Alt-Link/Alt-Link.vcxproj
@@ -136,6 +136,7 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Alt-Link.h" />
     <ClInclude Include="ARMv7ARDIF.h" />
     <ClInclude Include="ADIv5.h" />
     <ClInclude Include="ARMv6MBPU.h" />
