--- a/Alt-Link/Alt-Link.vcxproj
+++ b/Alt-Link/Alt-Link.vcxproj
@@ -79,7 +79,7 @@
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>..\hidapi\include;</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\hidapi\include;..\cereal\include</AdditionalIncludeDirectories>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
     </ClCompile>
     <Link>
@@ -107,7 +107,7 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>..\hidapi\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\hidapi\include;..\cereal\include</AdditionalIncludeDirectories>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
     </ClCompile>
     <Link>
@@ -144,6 +144,7 @@
     <ClInclude Include="ARMv6MSCS.h" />
     <ClInclude Include="ARMv7MFPB.h" />
     <ClInclude Include="assert.h" />
+    <ClInclude Include="cereal.h" />
     <ClInclude Include="CMSIS-DAP.h" />
     <ClInclude Include="Converter.h" />
     <ClInclude Include="DAP.h" />
