--- a/Alt-Link/Alt-Link.vcxproj.filters
+++ b/Alt-Link/Alt-Link.vcxproj.filters
@@ -78,6 +78,9 @@
     <ClInclude Include="Alt-Link.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
+    <ClInclude Include="cereal.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
