* Add HTTP server to support target control with JSON. * Support basic commands.

--- a/Alt-Link-Console/Alt-Link-Console.vcxproj.filters
+++ b/Alt-Link-Console/Alt-Link-Console.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClInclude Include="RspServer.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
+    <ClInclude Include="HttpServer.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -33,6 +36,9 @@
       <Filter>ソース ファイル</Filter>
     </ClCompile>
     <ClCompile Include="RspServer.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="HttpServer.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
   </ItemGroup>
