--- a/Alt-Link-Console/Alt-Link-Console.vcxproj
+++ b/Alt-Link-Console/Alt-Link-Console.vcxproj
@@ -85,11 +85,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="HttpServer.h" />
     <ClInclude Include="RspServer.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="HttpServer.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="RspServer.cpp" />
     <ClCompile Include="stdafx.cpp">
